// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: var(--wp-g2-surface-color);
  color: var(--wp-g2-color-text);
  position: relative;
  --wp-g2-surface-background-size: 16px;
  --wp-g2-surface-background-size-dotted: 15px;
  box-shadow: 0 0 0 1px var(--wp-g2-surface-border-color);
  outline: none;
  border-radius: var(--wp-g2-card-border-radius);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  height: 100%;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  height: auto;
  max-height: 100%;
  padding: var(--wp-g2-card-padding);
  padding: calc(var(--wp-g2-grid-base) * 6);
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

@media only screen and (min-device-width:40em) {
  .emotion-2::-webkit-scrollbar {
    height: 12px;
    width: 12px;
  }

  .emotion-2::-webkit-scrollbar-track {
    background-color: transparent;
  }

  .emotion-2::-webkit-scrollbar-track {
    background: var(--wp-g2-color-scrollbar-track);
    border-radius: 8px;
  }

  .emotion-2::-webkit-scrollbar-thumb {
    background-clip: padding-box;
    background-color: var(--wp-g2-color-scrollbar-thumb);
    border: 2px solid rgba(0,0,0,0);
    border-radius: 7px;
  }

  .emotion-2:hover::-webkit-scrollbar-thumb {
    background-color: var(--wp-g2-color-scrollbar-thumb-hover);
  }
}

.emotion-2:first-of-type {
  border-top-left-radius: var(--wp-g2-card-border-radius);
  border-top-right-radius: var(--wp-g2-card-border-radius);
}

.emotion-2:last-of-type {
  border-bottom-left-radius: var(--wp-g2-card-border-radius);
  border-bottom-right-radius: var(--wp-g2-card-border-radius);
}

.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-display: block;
  --wp-g2-flex-item-margin-bottom: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-right: 0;
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (prefers-reduced-motion) {
  .emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-3>*+*:not(marquee) {
  margin-top: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-3>* {
  min-height: 0;
}

.emotion-4 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: var(--wp-g2-color-text-heading);
  font-size: var(--wp-g2-font-size-h-1);
  font-weight: var(--wp-g2-font-weight-heading);
  display: block;
}

@media (prefers-reduced-motion) {
  .emotion-4 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-4 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-5 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: currentColor;
  fill: currentColor;
  height: 20px;
  width: 20px;
  display: inline-block;
  vertical-align: middle;
  margin-right: calc(var(--wp-g2-grid-base) * 2);
  position: relative;
  top: -3px;
}

@media (prefers-reduced-motion) {
  .emotion-5 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-5 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-5 svg {
  display: block;
}

.emotion-6 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  font-size: calc((13 / 13) * var(--wp-g2-font-size));
  font-weight: var(--wp-g2-font-weight);
}

@media (prefers-reduced-motion) {
  .emotion-6 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-6 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-7 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 1px 2px 0 rgba(0 ,0,0,0.05);
  opacity: var(--wp-g2-elevation-intensity);
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  border-radius: var(--wp-g2-card-border-radius);
}

@media (prefers-reduced-motion) {
  .emotion-7 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-7 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-8 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 2px 4px 0 rgba(0 ,0,0,0.1);
  opacity: var(--wp-g2-elevation-intensity);
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  border-radius: var(--wp-g2-card-border-radius);
}

@media (prefers-reduced-motion) {
  .emotion-8 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-8 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-surface wp-components-surface components-card wp-components-card components-blank-slate wp-components-blank-slate ic-10u706d is-small ic-1vr61kr ic-15506ld ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="BlankSlate"
>
  <div
    class="ic-192yz5d emotion-1"
    data-g2-component="CardContent"
  >
    <iframe
      aria-hidden="true"
      frameborder="0"
      src="about:blank"
      style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
    <div
      class="components-scrollable wp-components-scrollable components-card-body wp-components-card-body ic-1reds0m ic-y3p1xi ic-192yz5d emotion-2"
      data-g2-c16t="true"
      data-g2-component="CardBody"
    >
      <div
        class="components-flex wp-components-flex components-h-stack wp-components-h-stack components-v-stack wp-components-v-stack ic-osizff ic-15rn87 ic-17cs4ki ic-192yz5d emotion-3"
        data-g2-c16t="true"
        data-g2-component="VStack"
      >
        <div
          class="components-truncate wp-components-truncate components-text wp-components-text components-heading wp-components-heading ic-1ng8wck ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-4"
          data-g2-c16t="true"
          data-g2-component="Heading"
        >
          <div
            class="components-icon wp-components-icon ic-2q44rw ic-192yz5d emotion-5"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="20"
              size="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <polyline
                points="7 10 12 15 17 10"
              />
              <line
                x1="12"
                x2="12"
                y1="15"
                y2="3"
              />
            </svg>
          </div>
          Twitter Embed
        </div>
        <span
          class="components-truncate wp-components-truncate components-text wp-components-text ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-6"
          data-g2-c16t="true"
          data-g2-component="Text"
        >
          Input your twitter URL
        </span>
        <input
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-7"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-8"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render correctly without description and icon 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: var(--wp-g2-surface-color);
  color: var(--wp-g2-color-text);
  position: relative;
  --wp-g2-surface-background-size: 16px;
  --wp-g2-surface-background-size-dotted: 15px;
  box-shadow: 0 0 0 1px var(--wp-g2-surface-border-color);
  outline: none;
  border-radius: var(--wp-g2-card-border-radius);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  height: 100%;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  height: auto;
  max-height: 100%;
  padding: var(--wp-g2-card-padding);
  padding: calc(var(--wp-g2-grid-base) * 6);
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

@media only screen and (min-device-width:40em) {
  .emotion-2::-webkit-scrollbar {
    height: 12px;
    width: 12px;
  }

  .emotion-2::-webkit-scrollbar-track {
    background-color: transparent;
  }

  .emotion-2::-webkit-scrollbar-track {
    background: var(--wp-g2-color-scrollbar-track);
    border-radius: 8px;
  }

  .emotion-2::-webkit-scrollbar-thumb {
    background-clip: padding-box;
    background-color: var(--wp-g2-color-scrollbar-thumb);
    border: 2px solid rgba(0,0,0,0);
    border-radius: 7px;
  }

  .emotion-2:hover::-webkit-scrollbar-thumb {
    background-color: var(--wp-g2-color-scrollbar-thumb-hover);
  }
}

.emotion-2:first-of-type {
  border-top-left-radius: var(--wp-g2-card-border-radius);
  border-top-right-radius: var(--wp-g2-card-border-radius);
}

.emotion-2:last-of-type {
  border-bottom-left-radius: var(--wp-g2-card-border-radius);
  border-bottom-right-radius: var(--wp-g2-card-border-radius);
}

.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-display: block;
  --wp-g2-flex-item-margin-bottom: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-right: 0;
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (prefers-reduced-motion) {
  .emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-3>*+*:not(marquee) {
  margin-top: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-3>* {
  min-height: 0;
}

.emotion-4 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: var(--wp-g2-color-text-heading);
  font-size: var(--wp-g2-font-size-h-1);
  font-weight: var(--wp-g2-font-weight-heading);
  display: block;
}

@media (prefers-reduced-motion) {
  .emotion-4 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-4 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-5 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 1px 2px 0 rgba(0 ,0,0,0.05);
  opacity: var(--wp-g2-elevation-intensity);
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  border-radius: var(--wp-g2-card-border-radius);
}

@media (prefers-reduced-motion) {
  .emotion-5 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-5 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-6 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 2px 4px 0 rgba(0 ,0,0,0.1);
  opacity: var(--wp-g2-elevation-intensity);
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  border-radius: var(--wp-g2-card-border-radius);
}

@media (prefers-reduced-motion) {
  .emotion-6 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-6 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-surface wp-components-surface components-card wp-components-card components-blank-slate wp-components-blank-slate ic-10u706d is-small ic-1vr61kr ic-15506ld ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="BlankSlate"
>
  <div
    class="ic-192yz5d emotion-1"
    data-g2-component="CardContent"
  >
    <iframe
      aria-hidden="true"
      frameborder="0"
      src="about:blank"
      style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
    <div
      class="components-scrollable wp-components-scrollable components-card-body wp-components-card-body ic-1reds0m ic-y3p1xi ic-192yz5d emotion-2"
      data-g2-c16t="true"
      data-g2-component="CardBody"
    >
      <div
        class="components-flex wp-components-flex components-h-stack wp-components-h-stack components-v-stack wp-components-v-stack ic-osizff ic-15rn87 ic-17cs4ki ic-192yz5d emotion-3"
        data-g2-c16t="true"
        data-g2-component="VStack"
      >
        <div
          class="components-truncate wp-components-truncate components-text wp-components-text components-heading wp-components-heading ic-1ng8wck ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-4"
          data-g2-c16t="true"
          data-g2-component="Heading"
        >
          Twitter Embed
        </div>
        <input
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-5"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-6"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;
